Mejora en el flujo de datos y la logica de negocio. Ahora los apartados nombre, y apellido son obligatorios. Ademas el rol lo define el backend automaticamente que es "ADMIN" porque van a hacer dueño de su propio taller. De esta manera, cuando se unan a otro taller los usuarios, el rol va a cambiar dependiendo del administrador del taller al que se unan.
